--- a/Урок 6/css/style.css
+++ b/Урок 6/css/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Arvo:400,700');
 body {
-  font-family: 'Arvo', serif;
+  font-family: 'Arvo';
   color: #3b3f6a;
   margin: 0;
 }
