--- a/Урок 6/css/style.css
+++ b/Урок 6/css/style.css
@@ -1,6 +1,7 @@
-@import url('https://fonts.googleapis.com/css?family=Arvo:400,700');
+
+@import url(http://allfont.ru/allfont.css?fonts=arvo);
 body {
-  font-family: 'Arvo';
+  font-family: 'Arvo', arial;
   color: #3b3f6a;
   margin: 0;
 }
@@ -22,3 +23,4 @@ body {
   padding-bottom: 80px;
   padding-top: 20px;
 }
+
