--- a/Урок 6/css/style.css
+++ b/Урок 6/css/style.css
@@ -1,5 +1,5 @@
 
-@import url(http://allfont.ru/allfont.css?fonts=arvo);
+@import url(https://allfont.ru/allfont.css?fonts=arvo);
 body {
   font-family: 'Arvo', arial;
   color: #3b3f6a;
