--- a/lesson 16 JQuery/less/style.less
+++ b/lesson 16 JQuery/less/style.less
@@ -4,6 +4,7 @@
   padding: 0;
 }
 body {
+
   margin: 0;
   font-family: "Trebuchet MS", sans-serif;
 }
@@ -11,7 +12,7 @@ body {
 .main {
   margin: -50px;
   height: 500px;
-  background: url("/../img/sea.jpeg") no-repeat center center;
+  background: url("../img/sea.jpeg") no-repeat center center;
   background-size: 100%;
   h1 {
     margin-top: 50px;
