--- a/Lesson 17/less/style.less
+++ b/Lesson 17/less/style.less
@@ -10,7 +10,7 @@
 
 body {
   height: 742px;
-  background: url("/img/fon.jpg") no-repeat;
+  background: url("img/fon.jpg") no-repeat;
   background-size: 100%;
   font-family: 'Ubuntu', sans-serif;
 
