--- a/Lesson 17/css/style.css
+++ b/Lesson 17/css/style.css
@@ -8,7 +8,7 @@
 }
 body {
   height: 742px;
-  background: url("img/fon.jpg") no-repeat;
+  background: url("../img/fon.jpg") no-repeat;
   background-size: 100%;
   font-family: 'Ubuntu', sans-serif;
 }
