--- a/Lesson 15_adaptive/css/style.css
+++ b/Lesson 15_adaptive/css/style.css
@@ -4,7 +4,8 @@
 }
 .main {
   padding-top: 40px;
-  
+  margin-bottom: 30px;
+  height: 750px;
   width: 100vw;
   background: url("../img/bg.jpg") no-repeat;
 }
