--- a/Lesson 15_adaptive/css/style.css
+++ b/Lesson 15_adaptive/css/style.css
@@ -4,7 +4,7 @@
 }
 .main {
   padding-top: 40px;
-  height: 100vh;
+  height: 800px;
   width: 100vw;
   background: url("../img/bg.jpg") no-repeat;
   background-size: 100vw;
